# django-quiz

./: .env  .gitignore  README.md  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt
core/: models.py  serializers.py  urls.py  views.py
core/migrations/: 0001_initial.py  0002_answerquiz_finished.py  0002_auto_20210605_1517.py  0003_alter_answerchoice_answer.py  0003_quiz_slug.py  0004_alter_answerquiz_quiz.py
fixture/: test_case.json  test_case.py
front/: urls.py  views.py
front/static/css/: main.css
front/static/js/: plugins.js
front/templates/: base.html  index.html  login.html  quiz.html
quiz/: dto.py  services.py  settings.py  tests.py  urls.py
tests/: conftest.py  test_api.py  test_core.py
